[package]
name = "senbay-rs"
version = "0.1.0"
edition = "2024"
description = "Encode and decode the Senbay format."
license = "Apache-2.0"
repository = "https://github.com/haradama/senbay-rs"
homepage = "https://github.com/haradama/senbay-rs"
documentation = "https://docs.rs/senbay-rs"
readme = "README.md"
keywords = ["senbay", "qrcode", "sensor", "encoding", "video"]
categories = ["encoding", "multimedia::video"]

[dependencies]
serde_json = "1.0"

# Optional dependencies, only required for the video reader/writer.
opencv = { version = "0.94", optional = true }
qrcode = { version = "0.14", optional = true }
quircs = { version = "0.10", optional = true }

[features]
default = []
# Enables the QR/OpenCV based Reader and Writer. Requires a system OpenCV install.
video = ["dep:opencv", "dep:qrcode", "dep:quircs"]

# Sample app: read a Senbay video and print decoded records as JSON (headless).
[[example]]
name = "read_webm"
required-features = ["video"]

